Themes bootstrap en local

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css">
-    <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.css">
+    <link rel="stylesheet" href="/themes/bootstrap.min.css">
+    <link rel="stylesheet" href="/themes/bootstrap.css">
 
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
