--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="/bower_components/jquery.cookie/jquery.cookie.js"></script>
     
-    <title>TP Twitter</title>
+    <title>Casoer</title>
     <style>
         a {text-decoration: none; color: black;}
     </style>
@@ -19,27 +19,17 @@
 
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
-
+        <img src="images/casoar2.jpg" alt="casoar-icon" class="img-circle"  width="80" height="80">
         <div class="navbar-header">
-
-            <a class="navbar-brand" href="#">
-                <!--<span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>-->
-                TP Twitter
+            <a class="navbar-brand" href="views/about.html">
+                <p>Casoer</p>
+                <p>Tweet louder ! Like a casoar</p>
             </a>
         </div>
-
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>
         <form class="navbar-form navbar-left" role="search">
-
             <div class="form-group" id="searchBar">
             </div>
-           
         </form>
-
-
     </div>
 </nav>
 
