--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <head>
     <meta charset="utf-8">
     <title>TP Twitter</title>
+    
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -30,6 +34,10 @@
             <div class="form-group" id="searchBar">
             </div>
         </form>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><button class="btn btn-primary btn-lg" onclick="$('#body').load('views/about.html');">Join the revolution !</button></li>
+        </ul>
     </div>
 </nav>
 
