--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <img src="images/casoar2.jpg" alt="casoar-icon" class="img-circle"  width="80" height="80">
         <div class="navbar-header">
             <a class="navbar-brand" href="views/about.html">
-                <p>Casoer</p>
-                <p>Tweet louder ! Like a casoar</p>
+                <p>Casoer - </p>
+                <p>Tweet louder than birds ! Like a casoar</p>
             </a>
         </div>
         <form class="navbar-form navbar-left" role="search">
@@ -36,7 +36,7 @@
         </form>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><button class="btn btn-primary btn-lg" onclick="$('#body').load('views/about.html');">Join the revolution !</button></li>
+            <li><button class="btn btn-primary btn-lg" onclick="$('#body').load('views/about.html');"><img src="images/casoar8.jpg" alt="casoar-soon" class="img-rounded"  width="120" height="80">  Join the revolution !</button></li>
         </ul>
     </div>
 </nav>
